# crux-toolkit

./: .gitignore  CMakeLists.txt  CruxTrunk.sln  CruxTrunk.vcxproj  CruxTrunk.vcxproj.filters  Dockerfile  Makefile.am  NEWS  bootstrap  configure.ac  wix-patch.xml
crux-xlink-mod/src/c/xlink/: CMakeLists.txt  LinearPeptide.cpp  Makefile.am  SearchForXLinks.h  SearchForXLinksMods.cpp  SearchForXLinksMods.h  SelfLoopPeptide.h  XLink.cpp  XLink.h  XLinkBondMap.cpp  XLinkBondMap.h  XLinkMatch.h  XLinkMatchCollection.cpp  XLinkPeptide.cpp  XLinkScorer.cpp  XLinkScorer.h  XLinkSite.cpp  XLinkablePeptide.h  XLinkablePeptideIterator.h  generate_xlink_peptides.cpp  xlink_compute_qvalues.cpp
src/c/: AbstractMatch.cpp  AbstractMatch.h  CMakeLists.txt  CometApplication.cpp  CometApplication.h  ComputeQValues.cpp  ComputeQValues.h  CreateIndex.cpp  CreateIndex.h  CruxApplication.cpp  CruxApplication.h  CruxApplicationList.cpp  CruxApplicationList.h  CruxSpectrum.cpp  CruxSpectrum.h  Database.cpp  Database.h  DatabasePeptideIterator.cpp  DatabasePeptideIterator.h  DelimitedFile.cpp  DelimitedFile.h  DelimitedFileReader.cpp  DelimitedFileReader.h  DelimitedFileWriter.cpp  DelimitedFileWriter.h  Enzyme.cpp  Enzyme.h  ExtractColumns.cpp  ExtractColumns.h  ExtractRows.cpp  ExtractRows.h  ExtractScanNeutralMass.cpp  ExtractScanNeutralMass.h  FilterSpectraByFragments.cpp  FilterSpectraByFragments.h  GenerateDecoys.cpp  GeneratePeptides.cpp  GeneratePeptidesIterator.cpp  GeneratePeptidesIterator.h  GetMs2Spectrum.cpp  (+247 more)
src/c/ArrayLibrary/: CMakeLists.txt  Random.h
src/c/MSToolkit/: MSReader.h  Makefile  Makefile.am  Makefile.in  Spectrum.cpp
src/c/bullseye/: CKronik2.cpp  CKronik2.h  CMakeLists.txt  CruxBullseyeApplication.cpp  Makefile.am  bullseye.cpp
src/c/cuda/: Makefile  crux_cuda.c  crux_cuda.cu  crux_cuda.cu.h  crux_cuda.h  crux_cuda_test.c  mytimer.c  mytimer.h  radixsort.cuh
src/c/hardklor/: CAveragine.cpp  CHardklor.cpp  CHardklor2.cpp  CHardklorParser.cpp  CHardklorSetting.cpp  CMakeLists.txt  CMercury8.cpp  CMercury8.h  CNoiseReduction.cpp  CNoiseReduction.h  CPeriodicTable.cpp  CSplitSpectrum.cpp  CruxHardklorApplication.cpp  CruxHardklorApplication.h  FFT-HK.h  HardklorApp.cpp  Makefile.am  Smooth.h
src/c/hk2ms2/: CruxHK2MS2Application.cpp  HK2MS2.cpp  HKParser.cpp  Makefile.am  Makefile.hk2ms2
src/c/mpsm/: AKlammerRetentionPredictor.cpp  AKlammerRetentionPredictor.h  AKlammerStaticRetentionPredictor.cpp  AKlammerStaticRetentionPredictor.h  AKlammerWeights.h  AssignIonsMPSMSpectrum.cpp  AssignIonsMPSMSpectrum.h  BigSmallReal.cpp  BigSmallReal.h  ChargeIndex.cpp  ChargeIndex.h  CountCandidates.cpp  KrokhinRetentionPredictor.cpp  KrokhinRetentionPredictor.h  MPSM_ChargeMap.cpp  MPSM_ChargeMap.h  MPSM_Match.cpp  MPSM_Match.h  MPSM_MatchCollection.cpp  MPSM_MatchCollection.h  MPSM_OutputFiles.cpp  MPSM_OutputFiles.h  MPSM_Scorer.cpp  MPSM_Scorer.h  MPSM_ZStateMap.cpp  MPSM_ZStateMap.h  Makefile.am  NullRetentionPredictor.cpp  NullRetentionPredictor.h  PalmbaldRetentionPredictor.cpp  PalmbaldRetentionPredictor.h  PredictMPSMIons.cpp  PredictMPSMIons.h  RetentionPredictor.cpp  RetentionPredictor.h  ScoreMPSMSpectrum.cpp  ScoreMPSMSpectrum.h  SearchForMPSMS.cpp  SearchForMPSMS.h  ZStateIndex.cpp  (+5 more)
src/c/percolator/: BaseSpline.cpp  CMakeLists.txt  Caller.cpp  Option.h  PercolatorCInterface.cpp  PosteriorEstimator.cpp  QRankerCInterface.cpp  QRankerCInterface.h  SanityCheck.cpp  Scores.cpp  StdvNormalizer.cpp
src/c/posterior-error/: CMakeLists.txt
src/c/q-ranker/: Caller.cpp  Caller.h  Makefile.am  Net.cpp  Net.h  PSMDescription.h  PosteriorEstimator.cpp  QRankerCInterface.cpp  QRankerCInterface.h  Scores.cpp  Scores.h  TrainNet.cpp
src/c/qranker-barista/: Barista.cpp  Barista.h  BipartiteGraph.cpp  BipartiteGraph.h  CMakeLists.txt  CruxParser.h  DataSet.cpp  DataSet.h  Makefile.am  NeuralNet.cpp  NeuralNet.h  PSMScores.cpp  PSMScores.h  PepScores.cpp  PepScores.h  ProtScores.cpp  ProtScores.h  QRanker.cpp  QRanker.h  SQTParser.cpp  SQTParser.h  SpecFeatures.cpp  SpecFeatures.h  TabDelimParser.cpp  TabDelimParser.h
src/c/smoke/: crux-test-no-percolator.cmds  crux-test.cmds  runall
src/c/smoke/existing_search/: search.decoy-1.csm  search.decoy-2.csm  search.target.csm
src/c/smoke/good_results/: analyze_matches_index.percolator.target.txt  analyze_mods_index.percolator.target.txt  decoy-qval.txt  decoys_one_file.decoy.txt  no-decoys-ss  no-sp.txt  nsaf.spectral-counts.target.txt  one-decoy-file-ss  perc-ss  pvalues.sqt  qvalues.sqt  qvalues.txt  reverse.decoy.txt  search_custom_like_elastase.target.txt  search_elastase.target.txt  search_for_matches_default_existing_index.target.txt  search_mods_fasta.target.txt  search_pvalues.target.txt  search_tdc.target.txt  separate-ss  seq_test.sqt  sin.spectral-counts.target.txt  standard_analyze_default  standard_analyze_mods  standard_existing-index-new-results-perc.sqt  standard_existing-perc.sqt  standard_search_default.target.sqt  standard_search_default_existing_index.target.sqt  (+4 more)
src/c/test/: Makefile  check-mass.c  check-match.c  check-modifications.c  check-peptide-modifications.c  check-peptide.c  check-serialize.c  crux-unit-tests.c
src/c/tide/: CMakeLists.txt  abspath.cc  crux_sp_spectrum.h  mass_constants.cc  mass_constants.h  modifications.h  peptide.cc  records.h  weibull.cc
src/c/xlink/: AccurateMonoMass.cpp  CMakeLists.txt  LinearPeptide.cpp  LinearPeptide.h  LinkedIonSeries.cpp  LinkedIonSeries.h  LinkedPeptide.cpp  LinkedPeptide.h  Makefile  Makefile.am  MatchCandidate.cpp  MatchCandidate.h  MatchCandidateVector.cpp  MatchCandidateVector.h  SearchForXLinks.cpp  SearchForXLinks.h  SearchForXLinksMods.cpp  SearchForXLinksMods.h  SelfLoopPeptide.cpp  SelfLoopPeptide.h  XHHC_Peptide.cpp  XHHC_Peptide.h  XLink.cpp  XLink.h  XLinkBondMap.cpp  XLinkBondMap.h  XLinkMatch.cpp  XLinkMatch.h  XLinkMatchCollection.cpp  XLinkMatchCollection.h  XLinkPeptide.cpp  XLinkPeptide.h  XLinkScorer.cpp  XLinkScorer.h  XLinkSite.cpp  XLinkSite.h  XLinkablePeptide.cpp  XLinkablePeptide.h  XLinkablePeptideIterator.cpp  crux_ion_series.c  (+20 more)
(+281 files in other folders)
